--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -28,28 +28,13 @@
 
 
 
-@article{DBLP:journals/corr/CordtsORREBFRS16,
-  author    = {Marius Cordts and
-               Mohamed Omran and
-               Sebastian Ramos and
-               Timo Rehfeld and
-               Markus Enzweiler and
-               Rodrigo Benenson and
-               Uwe Franke and
-               Stefan Roth and
-               Bernt Schiele},
-  title     = {The Cityscapes Dataset for Semantic Urban Scene Understanding},
-  journal   = {CoRR},
-  volume    = {abs/1604.01685},
-  year      = {2016},
-  url       = {http://arxiv.org/abs/1604.01685},
-  archivePrefix = {arXiv},
-  eprint    = {1604.01685},
-  timestamp = {Thu, 14 Dec 2017 17:11:48 +0100},
-  biburl    = {https://dblp.org/rec/bib/journals/corr/CordtsORREBFRS16},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@article{Salimans2017EvolutionSA,
+  title={Evolution Strategies as a Scalable Alternative to Reinforcement Learning},
+  author={Tim Salimans and Jonathan Ho and Xi Chen and Ilya Sutskever},
+  journal={CoRR},
+  year={2017},
+  volume={abs/1703.03864}
 }
-
 
 
 
