results are added and choice of input is done

--- a/part1.tex
+++ b/part1.tex
@@ -47,6 +47,7 @@ To achieve the goal we diceded to devide our taks in 3 smaller Task:
 \end{itemize}
 In the End of our intership the task 1 and 2 were hard coded and task 3 was achieved with a SNN.
 \subsection{Challenges}
+\label{challenges}
 While the intership we encountered with a view problemms. The most important were:
  \begin{itemize}
 \item The Gazebo simulation got a non determensitic bahaviour so it was hard to find good weights for the SNN, as it was hard to reporoduce the same behaviour with the same weights
