--- a/part1.tex
+++ b/part1.tex
@@ -1,6 +1,9 @@
 \section{Introduction}
-Our Task in this intership was to find a machine learning method to control a robot arm such that robot arm throw a object in form of a cylinder as far as possible from his original position. For this expiremental task we got a Gazebo environment with a Table, a Hollie robot arm who was fixed on the table, a cylinder to throw and a camera which points on the cylinder, see Fig. \ref{init_state}.
-As the focus in this intership was in neurorobotics we chose to use spiking neural network(SNN) as machine learning method. The goal was now to find a suitable learning algorithm for a spiking neuronal network which could solve the task. We came to the conclusion that a reinforcment learning algorithm was the best way to let the network learn and after search of reinforcment algorithms we diced to use evolutional Algorithms. 
+The goal of the challenge was to enable a simulated robot arm to learn to throw a object (in our case a blue cylinder) as far as it is possible within the given simulation. The simulation in this case ran in the Neurorobotics Platform (NRP) which utilizes the Robotic Simulator Gazebo and the spiking neural network simulator nest.\\
+The Experimental setup consisted of a table on which a HoLLiE robot arm and a blue cylinder were placed.
+The initial setup can be seen in Fig. \ref{init_state}. For every simulation iteration the cylinder was placed at the exact same position. 
+As the focus in this course was neurorobtics we used spiking neural networks as the basis of our machine learning approach.  
+The goal was now to find a suitable learning algorithm for a spiking neuronal network which could solve the task. We came to the conclusion that a reinforcment learning algorithm was the best way to let the network learn and after search of reinforcment algorithms we diced to use evolutional Algorithms. 
 To design a spiking neuronal network we used the neurorobotic platform. It's a platform specialized for develop and train spiking neuronal networks. For that the platform includes the following things:
  \begin{itemize}
 \item a Gazebo environment and simulation
@@ -33,27 +36,20 @@ Spiking neuronal networks is a variant of artifical neuronal(ANN) networks which
 
 \section{Throwing Challenge}
 \subsection{Task}
-As said our Task in this intership was to throw a cylinder as far as possible form a table. For this the experiment we got the following sequenz of events.
- \begin{itemize}
-\item State 1 inital state: The robot arm and the cylinder are in their original state, see Fig. \ref{init_state}.
-\item State 2 throwing state: The robot arm move to the cylinder to throw or bump him away as far as possible. If the cylinder lands on the ground or 20 sec are over go back to state 1.
-\end{itemize}
-Our goal was now to optimaze the robot moves in state 2 with a SNN. For that we had to control 7 parameters with a SNN, 6 for the angles of the robot arm + 1 for open and close the hand. 
-To achieve the goal we diceded to devide our taks in 3 smaller Task:
- \begin{itemize}
-\item 1. Approach the Cylinder
-\item 2. Grap the Cylinder
-\item 3. Throw the Cylinder
-\end{itemize}
-In the End of our intership the task 1 and 2 were hard coded and task 3 was achieved with a SNN.
+The Task of this challenge was to teach the robot to throw the blue cylinder as far as possible. Since the robot arm is equipped with 6 different joints for the movement of the arm and several more for the hand, we simplified the movement. Firstly by combining the control of the hand joints into one grasping movement. Secondly by dividing the throwing movement into three seperate sub-movements which are:
+ \begin{enumerate}
+\item approaching the cylinder
+\item grasping the cylinder
+\item throwing the cylinder
+\end{enumerate}
+We chose to only learn the throwing movement with the help of SNNs because of several challenges which we examine in the following.
+
 \subsection{Challenges}
 \label{challenges}
-While the intership we encountered with a view problemms. The most important were:
- \begin{itemize}
-\item The Gazebo simulation got a non determensitic bahaviour so it was hard to find good weights for the SNN, as it was hard to reporoduce the same behaviour with the same weights
-\item Gripping the Cylinder with the hand. Trough non determenistic behaviour of the simulation it was possible that sometimes the hand didnt crapped the cylinder although it crapped the cylinder many times before with the same joint configuration. This could led to unaccurate results in training, as our precodition in training was that the robot crapped the cylinder.
-\item Exploding hand, sometimes the hand just exploding and the cylinder buged away this lead to unrealistic high distances.
-\item The Distance measurement wasn't realy acurate, sometimes we a achieved big distance with small throws.
-\end{itemize}
+The biggest challenge in this task is that the simulation is non deterministic. Even when throwing the cylinder with fixed pre-defined movements of the robot arm the results were not reproducible, which made it difficult to determine which movements were actually best for achieving a high distance. This also complicated the training of the SNN because we cannot reliably meassure the performance of the network.\\
+Another problem was that the physical simulation of the interaction of the robot hand and the cylinder could lead to unintended bugs which lead to unrealistic high distances, that dominated in our training approaches.\\
+In order to solve the challenge of non deterministic behaviour of the simulation a sollution would have been to run the experiment several times and choose the median of the achieved distances. But since it was not possible to speed up the simulation we decided to run the experimetn only once in order to decrease the time for training.\\
+
+
 
 
