results and conclusion are completed

--- a/main.tex
+++ b/main.tex
@@ -309,7 +309,7 @@ Karlsruher Institut für Technologie\\
 % As a general rule, do not put math, special symbols or citations
 % in the abstract
 \begin{abstract}
-As part of the practical course "Virtual Neurorobotics in the Human Brain Project" the challenge was to enable a simulated robot arm to learn to throw an object. In our work we evaluate different kinds of evolutionary strategies for training a spiking neural network for this task. Since the non deterministic nature of the simulation we also evaluate various choices of input to the neural network to simplify the task.%todo: satz zu den Ergebnissen sollte hlat mit dem Schluss übereinstimmen 
+Current state of the art machine learning algorithms are mostly dominated by deep learning methods using the artificial neural networks. 
 \end{abstract}
 
 % no keywords
